# werewolf-agent-team

./: .env.example  .gitignore  AGENTS.md  PLAN.md  PROJECT.md  README.md  TASKS.md  pyproject.toml
app/: db.py  main.py  models.py
app/agents/: __init__.py  base_agent.py  factory.py  guard_agent.py  hunter_agent.py  idiot_agent.py  prompts.py  schemas.py  scripted_agent.py  seer_agent.py  villager_agent.py  werewolf_agent.py  witch_agent.py
app/api/: routes_game.py  websocket.py
app/config/: persona_config.py  role_setups.py  rule_config.py  settings.py
app/engine/: __init__.py  death.py  initializer.py  resolver.py  vote.py  wincheck.py
app/graph/: __init__.py  main_graph.py  mixed_runner.py
app/llm/: __init__.py  client.py  schemas.py
app/services/: event_bus.py  game_session.py
app/state/: schemas.py  view_builder.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: api.ts  main.tsx  styles.css  types.ts
scripts/: qwen_smoke_game.py
tests/: test_agents.py  test_engine.py  test_extended_rules.py  test_game_api.py  test_game_session_service.py  test_llm_client.py  test_mixed_game.py  test_persona_config.py  test_role_setups.py  test_rule_config.py  test_runner.py  test_schemas.py  test_settings.py  test_view_builder.py
