[project]
name = "werewolf-agent-team"
version = "0.1.0"
description = "LangGraph-based multi-agent Werewolf game system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "langgraph>=0.2",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
